elf: Support DT_RELR relative relocation format
Upstream patch: https://sourceware.org/pipermail/libc-alpha/2021-October/132029.html
Bikeshedding: https://sourceware.org/pipermail/libc-alpha/2021-November/133009.html

This commit removes configure.ac and test changes to avoid conflict when
the upstream finally gets the feature. $(have-relr) is kept for local
testing.

To work around b/208156916, DT_NUM is not bumped. DT_RELR and DT_RELRSZ
take the l_info slots at DT_VERSYM+1 and DT_VERSYM+2.

--- a/elf/Makefile
+++ b/elf/Makefile
@@ -209,6 +209,13 @@ tests-execstack-yes = tst-execstack tst-execstack-needed tst-execstack-prog
 endif
 endif
 endif
+ifeq ($(have-relr),yes)
+tests += tst-relr tst-relr-no-pie
+tests-pie += tst-relr
+tests-no-pie += tst-relr-no-pie
+LDFLAGS-tst-relr += -Wl,--pack-dyn-relocs=relr
+LDFLAGS-tst-relr-no-pie += -Wl,--pack-dyn-relocs=relr -no-pie
+endif
 ifeq ($(run-built-tests),yes)
 tests-special += $(objpfx)tst-leaks1-mem.out \
 		 $(objpfx)tst-leaks1-static-mem.out $(objpfx)noload-mem.out \
